[gd_scene load_steps=13 format=3 uid="uid://c0r654ui6a0i6"]

[ext_resource type="Script" path="res://scenes/entities/player/player.gd" id="1_me4tv"]
[ext_resource type="Texture2D" uid="uid://cjey8tu6i47uj" path="res://scenes/entities/player/assets/player7.png" id="2_t500o"]
[ext_resource type="PackedScene" uid="uid://cjt725we6x1j5" path="res://scenes/weapons/pistol.tscn" id="3_8v2ng"]
[ext_resource type="Texture2D" uid="uid://cpyo5so78kyv3" path="res://scenes/entities/player/assets/player1.png" id="3_hlshk"]
[ext_resource type="Texture2D" uid="uid://deesg8rrepxof" path="res://scenes/entities/player/assets/player2.png" id="4_bda47"]
[ext_resource type="Texture2D" uid="uid://1dup3weferpm" path="res://scenes/entities/player/assets/player3.png" id="5_4mj04"]
[ext_resource type="Texture2D" uid="uid://bywya3uikueda" path="res://scenes/entities/player/assets/player4.png" id="6_8thf6"]
[ext_resource type="Texture2D" uid="uid://yfvqk4w6s28p" path="res://scenes/entities/player/assets/player5.png" id="7_8b5ca"]
[ext_resource type="Texture2D" uid="uid://cul7gu3wrywo7" path="res://scenes/entities/player/assets/player6.png" id="8_0vfgn"]
[ext_resource type="Texture2D" uid="uid://clcot8qmcpk1r" path="res://scenes/entities/player/assets/player8.png" id="9_t2rug"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j6u2j"]
animations = [{
"frames": [ExtResource( "2_t500o" )],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [ExtResource( "3_hlshk" ), ExtResource( "4_bda47" )],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [ExtResource( "5_4mj04" ), ExtResource( "6_8thf6" ), ExtResource( "7_8b5ca" ), ExtResource( "8_0vfgn" )],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [ExtResource( "9_t2rug" )],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_es2dg"]
radius = 5.0
height = 14.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource( "1_me4tv" )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
frames = SubResource( "SpriteFrames_j6u2j" )
animation = &"idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource( "CapsuleShape2D_es2dg" )

[node name="GroundCast" type="Node2D" parent="."]

[node name="GroundCastLeft" type="RayCast2D" parent="GroundCast"]
position = Vector2(-4, 0)
target_position = Vector2(0, 9)

[node name="GroundCastRight" type="RayCast2D" parent="GroundCast"]
position = Vector2(4, 0)
target_position = Vector2(0, 9)

[node name="GroundCastCenter" type="RayCast2D" parent="GroundCast"]
target_position = Vector2(0, 10)

[node name="Shoulder" type="Node2D" parent="."]

[node name="Arm" type="Node2D" parent="Shoulder"]
position = Vector2(7, 0)

[node name="Pistol" parent="Shoulder/Arm" instance=ExtResource( "3_8v2ng" )]

[node name="CoyoteTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
